--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kwallet-pam
-url = https://download.kde.org/stable/plasma/5.26.1/kwallet-pam-5.26.1.tar.xz
+url = https://download.kde.org/stable/plasma/5.26.2/kwallet-pam-5.26.2.tar.xz
 archives = 
 giturl = https://invent.kde.org/plasma/kwallet-pam.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
