--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kwallet-pam
-url = https://download.kde.org/stable/plasma/5.27.3/kwallet-pam-5.27.3.tar.xz
+url = https://download.kde.org/stable/plasma/5.27.4/kwallet-pam-5.27.4.tar.xz
 archives = 
 giturl = https://invent.kde.org/plasma/kwallet-pam.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
