--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kwallet-pam
-url = https://download.kde.org/stable/plasma/5.27.4/kwallet-pam-5.27.4.tar.xz
+url = https://download.kde.org/stable/plasma/5.27.5/kwallet-pam-5.27.5.tar.xz
 archives = 
 giturl = https://invent.kde.org/plasma/kwallet-pam.git
 domain = 
@@ -60,7 +60,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
