--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = kwallet-pam
-url = https://download.kde.org/stable/plasma/6.3.4/kwallet-pam-6.3.4.tar.xz
+url = https://download.kde.org/stable/plasma/6.3.5/kwallet-pam-6.3.5.tar.xz
 archives = 
 giturl = https://invent.kde.org/plasma/kwallet-pam.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
